@@ -1,8 +1,7 @@
 package cokoball.back.domain.Service;
 
-import cokoball.back.domain.DTO.DiaryDTO;
 import cokoball.back.domain.DTO.SolutionDTO;
-import cokoball.back.domain.Entity.Diary;
+import cokoball.back.domain.DTO.SolutionDTOList;
 import cokoball.back.domain.Entity.Emotion;
 import cokoball.back.domain.Entity.Solution;
 import cokoball.back.domain.Repository.EmotionRepository;
@@ -11,7 +10,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SolutionService {
@@ -25,18 +23,16 @@ public class SolutionService {
     }
 
     public List<SolutionDTO> getSolutionsByEmotion(Long emotionId) {
-        Emotion emotion = emotionRepository.findById(emotionId).orElseThrow(() -> new RuntimeException("Emotion not found"));
-        List<Diary> diaries = SolutionRepository.findByEmotion(emotion);
-        return Solutions.stream().map(this::toDTO).collect(Collectors.toList());
+        return solutionRepository.findAllByEmotionId(emotionId).stream().map(SolutionDTO::new).toList();
     }
 
-    public Solution saveSolution(SolutionDTO solutionDto) {
+    public Solution saveSolution(Long emotionId, String solutionContent) {
         // Emotion ID로 Emotion 객체를 찾음
-        Emotion emotion = emotionRepository.findById(solutionDto.emotionId())
+        Emotion emotion = emotionRepository.findById(emotionId)
                 .orElseThrow(() -> new IllegalArgumentException("Emotion not found"));
 
         // Solution 객체 생성 및 저장
-        Solution solution = new Solution(emotion, solutionDto.content());
+        Solution solution = new Solution(emotion, solutionContent);
         return solutionRepository.save(solution);
     }
 }
